# FRIGID

./: AGENTS.md  README.md  pyproject.toml
.autoresearch/: contract.json  editable_paths.yaml  incumbent.patch  journal.sqlite  last_scorer_run.txt  loop_config.yaml  program.md  project.yaml  protected_paths.yaml  research_backlog.md  results.tsv  scorer_contract.yaml  state.json  task.yaml  theory_diary.md
.autoresearch/dashboard/: index.html
.autoresearch/scorers/: frigid_speed_quality_scorer.sh
configs/: dreams_fingerprint_head_msg.yaml  fp2mol_finetune_mist_fingerprints.yaml
docs/: DLM_FINGERPRINT_ROBUSTNESS_RESULTS.md  FRIGID_AUTORESEARCH_CONTINUATION.md  FRIGID_BENCHMARK_SYSTEM.md  FRIGID_DREAMS_ADAPTER_REPLACEMENT_PLAN_20260630.md  FRIGID_DREAMS_FINGERPRINT_HEAD.md  FRIGID_EXPERIMENT_REGISTRY.md  FRIGID_EXPERIMENT_STATUS_AND_IDEAS.md  FRIGID_EXPERIMENT_TEMPLATE.md  FRIGID_NEXT_EXPERIMENT_DECISION_20260630.md  FRIGID_OPERATIONAL_USAGE.md  FRIGID_TECHNICAL_AUDIT.md  agent.md
docs/FRIGID_dlm_mist_fingerprint_adaptation_20260630/: run_report.md
docs/FRIGID_dreams_adapter_replacement_20260630/: artifact_manifest.json  experiment_plan.md  run_dreams_adapter_replacement.sbatch  run_report.md
docs/FRIGID_project/: FRIGID_EDA_report.md
env/: requirements.txt  requirements.yaml
scripts/: audit_formula_waste.py  benchmark_dlm_fingerprint_robustness.py  benchmark_spec2mol.py  blend_fingerprint_predictions.py  evaluate_fingerprint_encoder.py  export_mist_fingerprints.py  extract_dreams_embeddings.py  predict_dreams_fingerprint_head.py  prepare_dreams_fingerprint_dataset.py  setup_env.sh  summarize_benchmark_runs.py  sweep_fingerprint_predictions.py  train_dreams_adapter_replacement.py  train_dreams_fingerprint_head.py  train_dreams_mist_distilled_head.py  train_mist_dreams_residual.py  train_spectral_jepa.py
src/: torch_scatter.py
thoughts_and_notes/: frigid_spectrum_base_results_audit_2026-06-22.md
(+731 files in other folders)
